# nao_speechrecognitionserver

./: log_configuration.json  package.json
core/: servercore.js
core/network/: tcpnetwork.js  udpnetwork.js  websockets.js
nao/: CMakeLists.txt  main.cpp  qiproject.xml  speechprocessingserver.cpp  speechprocessingserver.h
public/: index.html
